--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@
 #theme: jekyll-agency
 remote_theme: raviriley/agency-jekyll-theme
 
-url    : "" # the base hostname & protocol for your site, e.g. http://example.com
+domain : "code-schmiede.ch"
+url    : "http://code-schmiede.ch" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 
 title      : Code Schmiede
